--- a/src/components/blog-components/hero-blog/HeroBlog.css
+++ b/src/components/blog-components/hero-blog/HeroBlog.css
@@ -5,11 +5,13 @@
   background: linear-gradient(45deg, #264653, #2f5f6d); /* Same gradient as home */
   animation: gradientAnimation 10s ease infinite;
   display: flex;
+  flex-direction: column;
   justify-content: center;  
   align-items: center;
   position: relative;
   box-sizing: border-box;
   height: 100vh;
+
 }
 
 /* Keyframes for gradient animation */
